force-app/main/default/objects/OCE__OptDetail__c/OCE__OptDetail__c.object-meta.xml
<CustomObject>
    <description>Object for gathering subscriptions per channel to Topics.</description>
    <label>Opt Detail</label>
    <nameField>
        <displayFormat>OD-{0000000000}</displayFormat>
        <label>Opt Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opt Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>