force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historical Opt</relationshipLabel>
    <relationshipName>Opt_Details</relationshipName>
    <type>Lookup</type>
</CustomField>