force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Address for Direct Mail.</description>
    <label>AccountAddress</label>
    <referenceTo>OCE__AccountAddress__c</referenceTo>
    <relationshipLabel>Opt Details</relationshipLabel>
    <relationshipName>OptDetails</relationshipName>
    <type>Lookup</type>
</CustomField>