force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__Channel__c.field-meta.xml
<CustomField>
    <fullName>OCE__Channel__c</fullName>
    <description>Channel type.</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>