force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__ChannelName__c.field-meta.xml
<CustomField>
    <fullName>OCE__ChannelName__c</fullName>
    <description>Name of the channel</description>
    <label>Channel Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>