force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__ChannelValue__c.field-meta.xml
<CustomField>
    <fullName>OCE__ChannelValue__c</fullName>
    <description>Depends of the channel contains actual email or phone number or id of AccountAddress in case of Direct Mail</description>
    <label>Channel Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>