force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__Opt__c.field-meta.xml
<CustomField>
    <fullName>OCE__Opt__c</fullName>
    <description>Parent Opt.</description>
    <label>Topic/Product</label>
    <referenceTo>OCE__Opt__c</referenceTo>
    <relationshipLabel>Opt Details</relationshipLabel>
    <relationshipName>OptDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>