force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__Subscription__c.field-meta.xml
<CustomField>
    <fullName>OCE__Subscription__c</fullName>
    <description>Subscription, opt in, opt out.</description>
    <label>Opt</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Asked</fullName>
                <default>true</default>
                <label>Not Asked</label>
            </value>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>