force-app/main/default/objects/OCE__OptDetail__c/fields/OCE__Topic__c.field-meta.xml
<CustomField>
    <fullName>OCE__Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Topic.</description>
    <label>Topic</label>
    <referenceTo>OCE__Topic__c</referenceTo>
    <relationshipLabel>Opt Details</relationshipLabel>
    <relationshipName>Consent_Details</relationshipName>
    <type>Lookup</type>
</CustomField>